# cst-runtime-cli

./: .gitignore  AGENTS.md  MEMORY.md  README.en.md  README.md  calculate_s11.py  change_g_args.json  change_thr_args.json  cst_process_allowlist.json  generate_s11_comparison_args.json  get_s11_args.json  open_project_args.json  opencode.json  prepare_run_args.json  pyproject.toml  startup_prototype_optimizer.ps1
.codex/: config.toml  config.toml.20260413_155756.bak
advanced/: INDEX.md
cst_runtime/: cli.py  errors.py  (+5 more)
skills/cst-runtime-cli/scripts/: README.md  cst_runtime_cli.py  pyproject.toml
skills/cst-runtime-cli/scripts/cst_runtime/: __init__.py  cli.py  cli_args_templates.py  cli_pipelines.py  evidence.py  farfield.py  modeling.py  project_ops.py  results.py  session_manager.py  workspace.py
skills/cst-runtime-cli/scripts/cst_runtime/cli/: dispatch.py
skills/cst-runtime-cli/scripts/cst_runtime/cli/pipelines/: impl.py  registry.py
skills/cst-runtime-cli/scripts/cst_runtime/core/: capture.py  doe.py  environment.py  farfield.py  gateway.py  modeling.py  optimizer.py  process.py  project.py  results.py  simulation.py  workspace.py
skills/cst-runtime-cli/scripts/cst_runtime/farfield_analysis/: __init__.py  flatness.py  parser.py
skills/cst-runtime-cli/scripts/cst_runtime/render/: __init__.py  canvas_3d.py  dashboard.py  svg_heatmap.py  svg_linechart.py  svg_page.py
skills/cst-runtime-cli/scripts/cst_runtime/tools/: __init__.py  audit.py  doe.py  farfield.py  modeling.py  optimization.py  project.py  results.py  session.py  simulation.py  workspace.py
(+573 files in other folders)
