[project]
name = "cst-runtime-cli"
version = "0.1.0"
description = "CST Studio Suite interaction infrastructure layer - CLI tools for modeling, simulation, optimization, and results analysis"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cst-studio-suite-link",
    "mcp[cli]>=1.25.0",
]

[tool.uv.sources]
cst-studio-suite-link = { path = "C:\\Program Files\\CST Studio Suite 2026\\AMD64\\python_cst_libraries", editable = true }
